--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "slugify": "^1.6.6",
     "twilio": "^5.4.3"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
+    "@types/node-cron": "^3.0.11",
     "@types/twilio": "^3.19.2",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
