--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "redis": "^4.7.0",
     "slugify": "^1.6.6",
     "twilio": "^5.4.3"
   },
