--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/server.js",
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "test": "jest --config jest.config.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,18 +24,27 @@
     "node-cron": "^3.0.3",
     "redis": "^4.7.0",
     "slugify": "^1.6.6",
-    "twilio": "^5.4.3"
+    "twilio": "^5.4.3",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.13.1",
     "@types/node-cron": "^3.0.11",
+    "@types/supertest": "^6.0.2",
     "@types/twilio": "^3.19.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.9",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
