--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
     "module": "CommonJS",
     "outDir": "./dist",
     "rootDir": "./src",
+    "types": ["node", "jest"],
+    "baseUrl": "./",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
